2009-11-11	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb_bug47167.result,
	mysql-test/innodb_bug47167.test, mysql-test/innodb_file_format.result:
	Fix Bug#47167 "set global innodb_file_format_check" cannot set value
	by User-Defined Variable

2009-11-11	The InnoDB Team

	* include/os0file.h, os/os0file.c:
	Fix Bug#3139 Mysql crashes: 'windows error 995' after several selects
	on a large DB

2009-11-04	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#32430 'show innodb status' causes errors
	Invalid (old?) table or database name in logs

2009-11-02	The InnoDB Team

	* btr/btr0sea.c, buf/buf0buf.c, dict/dict0dict.c, fil/fil0fil.c,
	ibuf/ibuf0ibuf.c, include/btr0sea.h, include/dict0dict.h,
	include/fil0fil.h, include/ibuf0ibuf.h, include/lock0lock.h,
	include/log0log.h, include/log0recv.h, include/mem0mem.h,
	include/mem0pool.h, include/os0file.h, include/pars0pars.h,
	include/srv0srv.h, include/thr0loc.h, include/trx0i_s.h,
	include/trx0purge.h, include/trx0rseg.h, include/trx0sys.h,
	include/trx0undo.h, include/usr0sess.h, lock/lock0lock.c,
	log/log0log.c, log/log0recv.c, mem/mem0dbg.c, mem/mem0pool.c,
	os/os0file.c, os/os0sync.c, os/os0thread.c, pars/lexyy.c,
	pars/pars0lex.l, que/que0que.c, srv/srv0srv.c, srv/srv0start.c,
	sync/sync0arr.c, sync/sync0sync.c, thr/thr0loc.c, trx/trx0i_s.c,
	trx/trx0purge.c, trx/trx0rseg.c, trx/trx0sys.c, trx/trx0undo.c,
	usr/usr0sess.c, ut/ut0mem.c:
	Fix Bug #45992 innodb memory not freed after shutdown
	Fix Bug #46656 InnoDB plugin: memory leaks (Valgrind)

2009-10-29	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#47125 auto_increment start value is ignored if an index is
	created and engine=innodb

2009-10-29	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb_bug47777.result,
	mysql-test/innodb_bug47777.test:
	Fix Bug#47777 innodb dies with spatial pk: Failing assertion: buf <=
	original_buf + buf_len

2009-10-29	The InnoDB Team
